# easy-local-llm

./: .env.example  LICENSE  README.ja.md  README.md  config.py  docker-compose.linux-hostnet.yml  docker-compose.yml  pyproject.toml  work_log.md
Docker/: Dockerfile
app/: config.py  llm_client.py
config/: litellm.yaml  models.example.json
doc/: guide.md  plan.md
install/: install.ps1  install.sh
orchestrator/: __init__.py  langgraph_workflow.py
scripts/: chat.sh  chat_cli.py  check_stack.sh  compose_mode.sh  render_litellm_config.py  restart_server.sh  run_langgraph_debate.py  show_model.sh  start_server.sh  stop_server.sh  test_llm.py
