[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-local-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
    "litellm[proxy]>=1.76.0",
    "numpy>=2.4.3",
    "openai>=2.28.0",
]

[project.optional-dependencies]
orchestration = [
    "langgraph>=0.6.0",
    "langchain-openai>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["app*", "orchestrator*"]
